samples/_failures_safe/1761339023_fd4b1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4535544.c: In function ‘main’:
./samples/SAFE/__tmp_c4535544.c:197:5: error: expected expression at end of input
  197 |     if (
      |     ^~
./samples/SAFE/__tmp_c4535544.c:197:5: error: expected declaration or statement at end of input
